<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/home_group">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
    </group>

    <group android:id="@+id/news_group">
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_baseline_markunread_24"
            android:title="@string/menu_news" />
    </group>

    <group android:id="@+id/category_group">
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_restaurant_menu_black_24dp"
            android:title="@string/menu_category" />
    </group>

    <group android:id="@+id/cart_group">
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/menu_cart" />
    </group>

    <group android:id="@+id/view_order_group">
        <item
            android:id="@+id/nav_view_order"
            android:icon="@drawable/ic_view_headline_black_24dp"
            android:title="@string/menu_view_orders" />
    </group>



</menu>
