<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:id="@+id/restaurant_group">
        <item
            android:id="@+id/nav_restaurant"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_restaurant" />
    </group>



    <group>
        <item
            android:id="@+id/nav_update_info"
            android:icon="@drawable/ic_baseline_update_24"
            android:title="@string/update_info" />
    </group>

    <group android:id="@+id/user_group">
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/sign_out" />
    </group>

</menu>
